# ToyNet

./: .gitattributes  README.md
code/algorithms/grokking_algorithms/: CMakeLists.txt  main.c
code/algorithms/grokking_algorithms/01/: 01.h
code/c_plus_plus/accelerated_cpp/: CMakeLists.txt  main.cpp
code/c_plus_plus/accelerated_cpp/chapter02/: ch_2.hpp  chapter_02.cpp  chapter_02.h  chapter_02_greeting.hpp
code/c_plus_plus/accelerated_cpp/chapter03/: ch_3.hpp  chapter_03.cpp  chapter_03.h  chapter_03_med.hpp
code/c_plus_plus/accelerated_cpp/chapter04/: chapter04.hpp  chapter04_grade.cpp  chapter04_grade.h  chapter04_median.cpp  chapter04_median.h  chapter04_student_info.cpp  chapter04_student_info.h
code/c_plus_plus/accelerated_cpp/chapter05/: chapter05_extract_fails.cpp  chapter05_extract_fails.h  chapter05_str.cpp  chapter05_str.h
code/c_plus_plus/accelerated_cpp/chapter06/: chapter06_str.cpp  chapter06_str.h  chapter06_student.cpp  chapter06_student.h
code/c_plus_plus/accelerated_cpp/chapter11/: chapter11_vec.h
code/c_plus_plus/accelerated_cpp/chapter_02/: ch_02.hpp  chapter_02.cpp  chapter_02.h
code/c_plus_plus/accelerated_cpp/chapter_04/: ch_04.hpp  grade.cpp  grade.h  median.h
code/c_plus_plus/accelerated_cpp/chapter_05/: extract_fails.cpp  extract_fails.h  str.h
code/c_plus_plus/accelerated_cpp/chapter_06/: ch_06.hpp  str.cpp  str.h  student.cpp  student.h
code/c_plus_plus/accelerated_cpp/chapter_07/: ch_07.hpp  chapter_07.cpp  chapter_07.h
code/c_plus_plus/accelerated_cpp/chapter_09/: student_info.cpp  student_info.h
code/c_plus_plus/accelerated_cpp/chapter_11/: vec.cpp  vec.hpp
code/c_plus_plus/accelerated_cpp/chapter_12/: str.cpp  str.h
code/c_plus_plus/accelerated_cpp/chapter_13/: core.h  grad.h  student_info.cpp
code/c_plus_plus/accelerated_cpp/chapter_14/: handle.hpp  ptr.hpp  ref_handle.hpp  str.cpp  student_info.h
code/c_plus_plus/black_horse_project/: CMakeLists.txt  main.cpp
code/c_plus_plus/black_horse_project/address_book/: address_book.cpp  menu.h  operator_options.h
code/c_plus_plus/black_horse_project/room_booking/: global.hpp  identity.h  manager1.h  order_file.h  student.cpp  teacher.cpp  teacher.h
code/c_plus_plus/black_horse_project/speech_match/: speaker.cpp  speaker.h  speech_manager.cpp
code/c_plus_plus/black_horse_project/worker_manager/: boss.h  employee.h  worker.cpp  worker.h  worker_manager.cpp  worker_manager.h
code/c_plus_plus/cpp_primer/: CMakeLists.txt  main.cpp
code/c_plus_plus/cpp_primer/chapter_02/: chapter_02.cpp  chapter_02.h
code/c_plus_plus/cpp_primer/chapter_03/: chapter_03.cpp  chapter_03.h
code/c_plus_plus/cpp_primer/chapter_04/: chapter_04.cpp  chapter_04.h
code/c_plus_plus/cpp_primer/chapter_05/: chapter_05.cpp  chapter_05.h
code/c_plus_plus/cpp_primer/chapter_06/: chapter_06.cpp  chapter_06.h
code/c_plus_plus/cpp_primer/chapter_07/: account.cpp  account.h  chapter_07.cpp  chapter_07.h  gz_account.cpp  gz_sales_data.cpp  gz_sales_data.h  gz_screen.cpp  gz_screen.h  gz_window_mgr.cpp  gz_window_mgr.h
code/c_plus_plus/cpp_primer/chapter_08/: chapter_08.cpp  chapter_08.h
code/c_plus_plus/cpp_primer/chapter_09/: chapter_09.cpp  chapter_09.h  test.hpp
code/c_plus_plus/cpp_primer/chapter_10/: chapter_10.cpp  chapter_10.h
code/c_plus_plus/cpp_primer/chapter_11/: chapter_11.cpp  chapter_11.h
code/c_plus_plus/cpp_primer/chapter_12/: chapter_12.cpp  chapter_12.h  gz_strblob.cpp  gz_strblob.h  query_result.cpp  str_blob.cpp  str_blob.h
code/c_plus_plus/cpp_primer/chapter_13/: ch_13.hpp  chapter_13.cpp  chapter_13.h  employee.cpp  employee.h  has_ptr.cpp  has_ptr.h  str_vec.cpp  str_vec.h  string.cpp  string.h
code/c_plus_plus/cpp_primer/chapter_14/: ch_14.hpp  chapter_14.cpp  chapter_14.h
code/c_plus_plus/cpp_primer/chapter_15/: bulk_quote.h  ch_15.hpp  chapter_15.cpp  chapter_15.h  disc_quote.cpp  disc_quote.h  limit_quote.h  quote.h
code/c_plus_plus/cpp_primer/chapter_16/: ch_16.hpp  chapter_16.cpp  chapter_16.h
code/c_plus_plus/cpp_primer/common/: account.cpp  account.h  blob.h  blob.hpp  blob_ptr.hpp  bulk_quote.cpp  disc_quote.h  folder.cpp  folder.h  gz_blob_ptr.hpp  gz_ch_14.hpp  gz_ch_16.hpp  gz_common.hpp  gz_folder.cpp  gz_has_ptr.cpp  gz_has_ptr.h  gz_message.cpp  gz_message.h  gz_query_result.cpp  gz_query_result.h  gz_sales_data.cpp  gz_sales_data.h  gz_screen.cpp  gz_screen.h  gz_str_blob.cpp  gz_str_blob.h  gz_str_blob_ptr.cpp  gz_str_blob_ptr.h  gz_str_vec.cpp  gz_str_vec.h  gz_string.cpp  gz_string.h  gz_text_query.cpp  gz_text_query.h  gz_window_mgr.cpp  gz_window_mgr.h  has_ptr.cpp  has_ptr.h  limited_quote.h  message.cpp  (+24 more)
code/c_plus_plus/cpp_primer/lib_util/: account.cpp  account.h  person.h  sales_data.cpp  sales_data.h  screen.cpp  screen.h  window_mgr.cpp  window_mgr.h
code/c_plus_plus/cpp_primer/object/: blob.h
code/c_plus_plus/cpp_primer/util/: gz_account.cpp  gz_account.h  gz_folder.h  gz_has_ptr.h  gz_query_result.cpp  gz_query_result.h  gz_sales_data.cpp  gz_sales_data.h  gz_screen.cpp  gz_str_blob.cpp  gz_str_blob.h  gz_text_query.cpp  gz_text_query.h  zg_base.cpp  zg_base.h  zg_bulk_quote.cpp  zg_bulk_quote.h  zg_limited_quote.cpp  zg_limited_quote.h  zg_quote.cpp  zg_quote.h
code/c_plus_plus/essential_cpp/: CMakeLists.txt  main.cpp
code/c_plus_plus/essential_cpp/chapter_02/: ch_2.hpp  chapter_02.cpp  chapter_02.h  num_sequence.h
code/c_plus_plus/huawei_cpp/: CMakeLists.txt  main.cpp
code/c_plus_plus/renzhai_cpp/: CMakeLists.txt  main.cpp
code/cpp/accelerated_cpp/: CMakeLists.txt  main.cpp
code/cpp/cpp_primer/: CMakeLists.txt
code/cpp/cpp_primer/common/: account.h  (+18 more)
code/cpp/effective_cpp/: CMakeLists.txt  main.cpp
code/cpp/essential_cpp/: CMakeLists.txt  main.cpp
code/cpp/houjie_cpp/: CMakeLists.txt
code/linux/begining_linux_programming/: CMakeLists.txt  main.c
code/linux/high_performance_linux_server_programming/: CMakeLists.txt
code/linux/linux_c_one_stop_programming/: CMakeLists.txt  main.c
code/linux/tcp_ip_programming/: CMakeLists.txt
code/linux/undertanding_linux_programming/: CMakeLists.txt  main.c
(+1319 files in other folders)
