cmake_minimum_required(VERSION 3.0.0)
project(tcp_ip VERSION 0.1.0)

add_subdirectory(ch_01)
add_subdirectory(ch_02)
add_subdirectory(ch_04)
add_subdirectory(ch_05)
add_subdirectory(ch_06)
add_subdirectory(ch_07)
add_subdirectory(ch_10)
add_subdirectory(ch_11)
add_subdirectory(ch_12)
add_subdirectory(ch_13)
add_subdirectory(ch_14)

add_compile_options(-std=c++11 -pthread -g  -ggdb -O0 -Wall   -fstack-protector-all -march=native -fnon-call-exceptions)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2 -Wall -core")
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

