
include_directories(.)

add_executable(ch_6_4 "ch_6_4.cpp" "binary_tree.h" "bt_node.h")
add_executable(ch_6_6 "ch_6_6.cpp" "fibonacci_ver3.h" "num_sequence_ver3.h" "num_sequence_ver4.h")
add_executable(ch_6_7 "ch_6_7.cpp" "chapter_06.h" "num_sequence_ver5.h")
add_executable(ch_6_8 "ch_6_8.cpp" "chapter_06.h")
